<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    android:id="@+id/cardAppointment"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white">

    <com.github.vipulasri.timelineview.TimelineView
        android:id="@+id/timeline"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:endLineColor="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:linePadding="5dp"
        app:lineWidth="2dp"
        app:marker="@drawable/ic_baseline_donut_large_24"
        app:markerSize="20dp"
        app:startLineColor="@color/colorPrimary" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="10dp"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:layout_marginTop="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewAppointmentTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/appointment_title"
                android:maxLines="1"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/imageButtonAppointmentEdit"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="20dp"
                android:background="@null"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:src="@drawable/ic_baseline_edit_24"
                android:layout_gravity="end"
                android:contentDescription="@string/edit_appointment_option" />

        </LinearLayout>

        <TextView
            android:id="@+id/textViewAppointmentDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="2"
            android:text="@string/temp_text"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/textViewAppointmentDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/demo_date"
                android:textColor="@android:color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time"
                android:textColor="@android:color/black"
                android:layout_marginStart="10dp"/>

            <TextView
                android:id="@+id/textViewAppointmentStartTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/demo_start"
                android:textColor="@android:color/black"
                android:layout_marginStart="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hyphen"
                android:textColor="@android:color/black"
                android:layout_marginStart="10dp"/>

            <TextView
                android:id="@+id/textViewAppointmentEndTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/demo_end_time"
                android:textColor="@android:color/black"
                android:layout_marginStart="10dp"/>
        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>