<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".home.AddAppointmentActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="10dp"
        android:paddingEnd="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp">

            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_baseline_title_24" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputEditTextTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/note_title"
                android:layout_marginStart="15dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp">

            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_baseline_person_24" />

            <AutoCompleteTextView
                android:id="@+id/textInputEditTextContact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/add_new_client"
                android:layout_marginStart="15dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"/>

            <ImageButton
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:src="@drawable/ic_baseline_edit_24" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:weightSum="10">

            <ImageView
                android:layout_weight="1"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_gravity="start"
                android:src="@drawable/ic_baseline_date_range_24" />

            <TextView
                android:id="@+id/appointmentDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textSize="17sp"
                android:hint="@string/select_date"
                android:layout_marginStart="15dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"/>

            <TextView
                android:id="@+id/textInputEditTextStartTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="17sp"
                android:hint="@string/from"
                android:layout_marginStart="15dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hyphen"
                android:textSize="18sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/textInputEditTextEndTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="17sp"
                android:hint="@string/to"
                android:layout_marginStart="15dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp">

            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_baseline_assignment_24" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputEditTextNote"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/note"
                android:layout_marginStart="15dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp">

            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_baseline_flag_24" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputEditTextTag"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/tag"
                android:layout_marginStart="15dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp">

            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_baseline_location_on_24" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputEditTextLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/location"
                android:layout_marginStart="15dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp">

            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_baseline_message_24" />

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/spinnerRemainder"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="15dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:gravity="end">
            <Button
                android:id="@+id/buttonSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save"
                android:layout_marginEnd="20dp"
                android:background="@drawable/rounded_corners"/>
            <Button
                android:id="@+id/buttonCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:background="@drawable/rounded_corners"/>
        </LinearLayout>

    </LinearLayout>

</ScrollView>
